--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SHOP"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Activity.GioHang"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ChiTietSanPham"
             android:exported="false" />
         <activity
