--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation "androidx.cardview:cardview:1.0.0"
-//    implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.1'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
 
 }
